added semi pre aggregated spark stats

--- a/SparkConnectionTest.ipynb
+++ b/SparkConnectionTest.ipynb
@@ -10,25 +10,80 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/02/12 10:03:11 WARN Utils: Your hostname, Chaturvedi_PC resolves to a loopback address: 127.0.1.1; using 172.27.64.6 instead (on interface eth0)\n",
-      "23/02/12 10:03:11 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "23/02/12 10:03:12 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/02/12 12:33:01 WARN Utils: Your hostname, Chaturvedi_PC resolves to a loopback address: 127.0.1.1; using 172.27.64.6 instead (on interface eth0)\n",
+      "23/02/12 12:33:01 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/02/12 12:33:02 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "                                                                                \r"
      ]
     }
    ],
    "source": [
-    "from pyspark.sql import SparkSession, DataFrame\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import functions as f\n",
     "\n",
-    "spark = SparkSession.builder.appName('SparkByExamples.com').config('spark.driver.bindAddress','localhost').config(\"spark.ui.port\",\"4051\").config(\"spark.driver.memory\",\"3g\").getOrCreate()"
+    "parquet_input_path = '/home/abhay/work/dream11/processed_output/delivery_parquet'\n",
+    "\n",
+    "spark = SparkSession.builder.appName('SparkByExamples.com')\\\n",
+    "    .config('spark.driver.bindAddress','localhost')\\\n",
+    "    .config(\"spark.ui.port\",\"4051\")\\\n",
+    "    .config(\"spark.driver.memory\",\"5g\")\\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "t20_df_with_boundaries = spark.read.parquet(parquet_input_path)\\\n",
+    "    .where(f.col('match_type') == 'T20') \\\n",
+    "    .where(f.col('dt') > '2016-12-31') \\\n",
+    "    .withColumn('is_boundary', f.when((f.col('batter_runs') >= 4) & (f.col(\"batter_runs\") < 6), 1).otherwise(0)) \\\n",
+    "    .withColumn('is_six', f.when(f.col(\"batter_runs\") >= 6, 1).otherwise(0)) \\\n",
+    "    .withColumn('is_dismissed', f.when(f.col(\"wicket_player_id\") == f.col(\"batter_id\"), 1).otherwise(0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "a5ae3385",
+   "execution_count": 2,
+   "id": "11c594e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fielder_relevant_dimensions = [\"dt\",\"wicket_fielder_id\", \"wicket_fielder_name\", \"bowler_name\", \"bowler_id\"] \n",
+    "fielder_relevant_metrics = [\"is_dismissed\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "74eb1341",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col, trunc\n",
+    "t20_batter_fielder_df = t20_df_with_boundaries\\\n",
+    "    .select(fielder_relevant_dimensions+fielder_relevant_metrics) \\\n",
+    "    .filter(col(\"wicket_fielder_id\").isNotNull()) \\\n",
+    "    .withColumn(\"dt\", trunc(\"dt\", \"month\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c7a3709c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import sum, count, when, col\n",
+    "\n",
+    "t20_batter_fielder_df_per_month = t20_batter_fielder_df.groupBy(fielder_relevant_dimensions) \\\n",
+    "    .agg(\n",
+    "        sum(\"is_dismissed\").alias(\"wicket_sum\")\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "05881a23",
    "metadata": {},
    "outputs": [
     {
@@ -37,53 +92,184 @@
      "text": [
       "                                                                                \r"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dt</th>\n",
+       "      <th>wicket_fielder_id</th>\n",
+       "      <th>wicket_fielder_name</th>\n",
+       "      <th>bowler_name</th>\n",
+       "      <th>bowler_id</th>\n",
+       "      <th>wicket_sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-09-01</td>\n",
+       "      <td>b0946605</td>\n",
+       "      <td>AS Joseph</td>\n",
+       "      <td>KOK Williams</td>\n",
+       "      <td>78cb83f3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-04-01</td>\n",
+       "      <td>b0482a1d</td>\n",
+       "      <td>Tilak Varma</td>\n",
+       "      <td>DR Sams</td>\n",
+       "      <td>caf69bf7</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-02-01</td>\n",
+       "      <td>52cb36a0</td>\n",
+       "      <td>Manisankar Murasingh</td>\n",
+       "      <td>Kamal Das</td>\n",
+       "      <td>1d09dda7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-11-01</td>\n",
+       "      <td>6f7e30d6</td>\n",
+       "      <td>JE Dooley</td>\n",
+       "      <td>S Molineux</td>\n",
+       "      <td>99e23670</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-11-01</td>\n",
+       "      <td>d1c36f5c</td>\n",
+       "      <td>JJ Roy</td>\n",
+       "      <td>AU Rashid</td>\n",
+       "      <td>249d60c9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38711</th>\n",
+       "      <td>2019-03-01</td>\n",
+       "      <td>77255a9e</td>\n",
+       "      <td>RA Tripathi</td>\n",
+       "      <td>BA Stokes</td>\n",
+       "      <td>e087956b</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38712</th>\n",
+       "      <td>2022-09-01</td>\n",
+       "      <td>aea89d48</td>\n",
+       "      <td>L Keny</td>\n",
+       "      <td>KKN Egodage</td>\n",
+       "      <td>5bb904d4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38713</th>\n",
+       "      <td>2017-05-01</td>\n",
+       "      <td>0994d0ae</td>\n",
+       "      <td>V Shankar</td>\n",
+       "      <td>B Kumar</td>\n",
+       "      <td>2e81a32d</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38714</th>\n",
+       "      <td>2020-09-01</td>\n",
+       "      <td>abb83e27</td>\n",
+       "      <td>JM Bairstow</td>\n",
+       "      <td>Rashid Khan</td>\n",
+       "      <td>5f547c8b</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38715</th>\n",
+       "      <td>2017-07-01</td>\n",
+       "      <td>92aeac25</td>\n",
+       "      <td>AD Hales</td>\n",
+       "      <td>IS Sodhi</td>\n",
+       "      <td>641ac5ff</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>38716 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               dt wicket_fielder_id   wicket_fielder_name   bowler_name  \\\n",
+       "0      2021-09-01          b0946605             AS Joseph  KOK Williams   \n",
+       "1      2022-04-01          b0482a1d           Tilak Varma       DR Sams   \n",
+       "2      2019-02-01          52cb36a0  Manisankar Murasingh     Kamal Das   \n",
+       "3      2021-11-01          6f7e30d6             JE Dooley    S Molineux   \n",
+       "4      2021-11-01          d1c36f5c                JJ Roy     AU Rashid   \n",
+       "...           ...               ...                   ...           ...   \n",
+       "38711  2019-03-01          77255a9e           RA Tripathi     BA Stokes   \n",
+       "38712  2022-09-01          aea89d48                L Keny   KKN Egodage   \n",
+       "38713  2017-05-01          0994d0ae             V Shankar       B Kumar   \n",
+       "38714  2020-09-01          abb83e27           JM Bairstow   Rashid Khan   \n",
+       "38715  2017-07-01          92aeac25              AD Hales      IS Sodhi   \n",
+       "\n",
+       "      bowler_id  wicket_sum  \n",
+       "0      78cb83f3           2  \n",
+       "1      caf69bf7           3  \n",
+       "2      1d09dda7           1  \n",
+       "3      99e23670           3  \n",
+       "4      249d60c9           1  \n",
+       "...         ...         ...  \n",
+       "38711  e087956b           1  \n",
+       "38712  5bb904d4           1  \n",
+       "38713  2e81a32d           1  \n",
+       "38714  5f547c8b           1  \n",
+       "38715  641ac5ff           1  \n",
+       "\n",
+       "[38716 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pyspark.sql import functions as f\n",
-    "\n",
-    "t20_df_with_boundaries = spark.read.parquet(\"processed_output/delivery_parquet\")\\\n",
-    "    .where(f.col('match_type') == 'T20') \\\n",
-    "    .where(f.col('dt') > '2023-01-15') \\\n",
-    "    .withColumn('is_boundary', f.when((f.col('batter_runs') >= 4) & (f.col(\"batter_runs\") < 6), 1).otherwise(0)) \\\n",
-    "    .withColumn('is_six', f.when(f.col(\"batter_runs\") >= 6, 1).otherwise(0)) \\\n",
-    "    .withColumn('is_dismissed', f.when(f.col(\"wicket_player_id\") == f.col(\"batter_id\"), 1).otherwise(0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "9c0c5f82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batter_relevant_dimensions = [\"match_id\", \"dt\", \"venue_name\", \"batter_name\", \"batter_id\"] \n",
-    "batter_relevant_metrics = [\"batter_runs\",\"is_dismissed\", \"is_boundary\", \"is_six\"]\n",
-    "t20_batter_delivery_df = t20_df_with_boundaries.select(batter_relevant_dimensions+batter_relevant_metrics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "330cc2d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import sum, count\n",
-    "t20_batter_match_df  = t20_batter_delivery_df.groupBy(batter_relevant_dimensions) \\\n",
-    "    .agg(\n",
-    "        sum(\"batter_runs\").alias(\"batter_run_sum\"),\n",
-    "        sum(\"is_dismissed\").alias(\"dismissals\"),\n",
-    "        sum(\"is_boundary\").alias(\"boundary_count\"),\n",
-    "        sum(\"is_six\").alias(\"six_count\"),\n",
-    "        count(\"batter_id\").alias(\"deliveries\")\n",
-    "    )"
+    "t20_batter_fielder_df_per_month.toPandas()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd39e1ec",
+   "id": "50e61f63",
    "metadata": {},
    "outputs": [],
    "source": []
