added is_male feature

--- a/InferenceFeaturePrep.ipynb
+++ b/InferenceFeaturePrep.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "99b3a150",
+   "id": "884d6502",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bbb1c56d",
+   "id": "12593e35",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "be399a00",
+   "id": "62fef609",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c5de41ab",
+   "id": "f56cdac8",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "2eef2d99",
+   "id": "8e6f34b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "05ac1a01",
+   "id": "f6060934",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "0173585f",
+   "id": "e0b2bcef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "a5feb17d",
+   "id": "acc1b6f8",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "6c559af4",
+   "id": "b3061a82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "006659e6",
+   "id": "d32f98f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "000a7ed8",
+   "id": "7345d785",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "b5483cca",
+   "id": "c25ff96e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "36808f09",
+   "id": "96e5818e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "011ed694",
+   "id": "8f10d441",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "74ae8892",
+   "id": "779b8d55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "5ba7d4a0",
+   "id": "f4a3ed45",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "46768feb",
+   "id": "3d56695d",
    "metadata": {},
    "outputs": [
     {
@@ -641,8 +641,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "id": "6fd26107",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|gender|\n",
+      "+------+\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "|female|\n",
+      "+------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from path_manager import raw_data_flatten_path\n",
+    "spark.read.parquet(raw_data_flatten_path).select(\"gender\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0d269c9f",
+   "id": "4453ed91",
    "metadata": {},
    "outputs": [],
    "source": []
