added steps to train and infer

--- a/PeopleRegistry.ipynb
+++ b/PeopleRegistry.ipynb
@@ -14,337 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f85641ff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>identifier</th>\n",
-       "      <th>name</th>\n",
-       "      <th>unique_name</th>\n",
-       "      <th>key_bcci</th>\n",
-       "      <th>key_bcci_2</th>\n",
-       "      <th>key_bigbash</th>\n",
-       "      <th>key_cricbuzz</th>\n",
-       "      <th>key_crichq</th>\n",
-       "      <th>key_cricinfo</th>\n",
-       "      <th>key_cricinfo_2</th>\n",
-       "      <th>key_cricingif</th>\n",
-       "      <th>key_cricketarchive</th>\n",
-       "      <th>key_cricketarchive_2</th>\n",
-       "      <th>key_opta</th>\n",
-       "      <th>key_opta_2</th>\n",
-       "      <th>key_pulse</th>\n",
-       "      <th>key_pulse_2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>b4a23876</td>\n",
-       "      <td>AAA Amsterdam</td>\n",
-       "      <td>AAA Amsterdam</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>772407</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4b0e3049</td>\n",
-       "      <td>AA Alleyne</td>\n",
-       "      <td>AA Alleyne</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>661441</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1512811</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>18542</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>fd3c5c00</td>\n",
-       "      <td>AAA Patel</td>\n",
-       "      <td>AAA Patel</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1163136</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>bc005f0d</td>\n",
-       "      <td>AAA White</td>\n",
-       "      <td>AAA White</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>474307</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5c67c7a6</td>\n",
-       "      <td>AA Baig</td>\n",
-       "      <td>AA Baig</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>524897</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13729</th>\n",
-       "      <td>3a0f6df2</td>\n",
-       "      <td>Zulfiqar Babar</td>\n",
-       "      <td>Zulfiqar Babar</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>43871</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>45107</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>984</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13730</th>\n",
-       "      <td>9bf23c13</td>\n",
-       "      <td>Zulqarnain</td>\n",
-       "      <td>Zulqarnain</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>43707</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1803</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13731</th>\n",
-       "      <td>ee9bdbc8</td>\n",
-       "      <td>Zulqarnain Haider</td>\n",
-       "      <td>Zulqarnain Haider</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>43860</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>45108</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13732</th>\n",
-       "      <td>2d46e8ed</td>\n",
-       "      <td>Zulqarnain Haider</td>\n",
-       "      <td>Zulqarnain Haider (2)</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1046641</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13733</th>\n",
-       "      <td>d35c1fc7</td>\n",
-       "      <td>Zumika Azmi</td>\n",
-       "      <td>Zumika Azmi</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1050037</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>13734 rows × 17 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      identifier               name            unique_name key_bcci  \\\n",
-       "0       b4a23876      AAA Amsterdam          AAA Amsterdam     None   \n",
-       "1       4b0e3049         AA Alleyne             AA Alleyne     None   \n",
-       "2       fd3c5c00          AAA Patel              AAA Patel     None   \n",
-       "3       bc005f0d          AAA White              AAA White     None   \n",
-       "4       5c67c7a6            AA Baig                AA Baig     None   \n",
-       "...          ...                ...                    ...      ...   \n",
-       "13729   3a0f6df2     Zulfiqar Babar         Zulfiqar Babar     None   \n",
-       "13730   9bf23c13         Zulqarnain             Zulqarnain     None   \n",
-       "13731   ee9bdbc8  Zulqarnain Haider      Zulqarnain Haider     None   \n",
-       "13732   2d46e8ed  Zulqarnain Haider  Zulqarnain Haider (2)     None   \n",
-       "13733   d35c1fc7        Zumika Azmi            Zumika Azmi     None   \n",
-       "\n",
-       "      key_bcci_2 key_bigbash key_cricbuzz key_crichq key_cricinfo  \\\n",
-       "0           None        None         None       None       772407   \n",
-       "1           None        None         None       None       661441   \n",
-       "2           None        None         None       None      1163136   \n",
-       "3           None        None         None       None       474307   \n",
-       "4           None        None         None       None       524897   \n",
-       "...          ...         ...          ...        ...          ...   \n",
-       "13729       None        None         None       None        43871   \n",
-       "13730       None        None         None       None        43707   \n",
-       "13731       None        None         None       None        43860   \n",
-       "13732       None        None         None       None      1046641   \n",
-       "13733       None        None         None       None      1050037   \n",
-       "\n",
-       "      key_cricinfo_2 key_cricingif key_cricketarchive key_cricketarchive_2  \\\n",
-       "0               None          None               None                 None   \n",
-       "1               None          None            1512811                 None   \n",
-       "2               None          None               None                 None   \n",
-       "3               None          None               None                 None   \n",
-       "4               None          None               None                 None   \n",
-       "...              ...           ...                ...                  ...   \n",
-       "13729           None          None              45107                 None   \n",
-       "13730           None          None               1803                 None   \n",
-       "13731           None          None              45108                 None   \n",
-       "13732           None          None               None                 None   \n",
-       "13733           None          None               None                 None   \n",
-       "\n",
-       "      key_opta key_opta_2 key_pulse key_pulse_2  \n",
-       "0         None       None      None        None  \n",
-       "1         None       None     18542        None  \n",
-       "2         None       None      None        None  \n",
-       "3         None       None      None        None  \n",
-       "4         None       None      None        None  \n",
-       "...        ...        ...       ...         ...  \n",
-       "13729     None       None       984        None  \n",
-       "13730     None       None      None        None  \n",
-       "13731     None       None      None        None  \n",
-       "13732     None       None      None        None  \n",
-       "13733     None       None      None        None  \n",
-       "\n",
-       "[13734 rows x 17 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from etl.spark.spark_session_helper import spark\n",
     "all_players_df = spark.read.csv(\"downloads/people.csv\", header=True)\n",
@@ -355,7 +28,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dream11",
    "language": "python",
    "name": "python3"
   },
@@ -370,6 +43,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "198575fd6629fa91bfd9fa074cc83b4a356efd4da6eb166ac1d1445fe6d3a8d9"
+   }
   }
  },
  "nbformat": 4,
