--- a/InferenceFeaturePrep.ipynb
+++ b/InferenceFeaturePrep.ipynb
@@ -358,7 +358,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dream11",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
