added analysis for player test stats and ipl stats

--- a/notebooks/PeopleRegistry.ipynb
+++ b/notebooks/PeopleRegistry.ipynb
@@ -7,9 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import subprocess\n",
-    "download_command = \"wget --directory-prefix downloads https://cricsheet.org/register/people.csv\"\n",
-    "subprocess.run(download_command.split(\" \"))"
+    "# import subprocess\n",
+    "# download_command = \"wget --directory-prefix downloads https://cricsheet.org/register/people.csv\"\n",
+    "# subprocess.run(download_command.split(\" \"))"
    ]
   },
   {
@@ -24,11 +24,23 @@
     "all_players_df.registerTempTable(\"all_players\")\n",
     "all_players_df.toPandas()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bccae962-8bd5-4a58-b019-4725bbb7ad81",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"select * from all_players where lower(name) like '%kohli%'\").toPandas()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dream11",
+   "display_name": "pytasy",
    "language": "python",
    "name": "python3"
   },
@@ -42,12 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "198575fd6629fa91bfd9fa074cc83b4a356efd4da6eb166ac1d1445fe6d3a8d9"
-   }
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
